tests/ui/reflexive_unstubbed_method.stderr
error: `build` is not dyn-compatible (generic type or const parameter), so the reflexive impl cannot forward it; annotate it `#[dyn_shim(panic)]` to provide a panicking stub, or give it a default body
  --> tests/ui/reflexive_unstubbed_method.rs:11:8
   |
11 |     fn build<T>(&self, seed: T) -> i32;
   |        ^^^^^
